# latero-graphics-demo

./: CMakeLists.txt  INSTALL  README
media/img/: main.col
media/img/combo-objects/: boat.gen  candle.gen  car.gen  crown.gen  cup.gen  flashlight.gen  insect.gen  leaf.gen  necklace.gen  shirt.gen  sun.gen  umbrella.gen
media/img/vib-objects/: balloons.gen  car.gen  cloud.gen  cup.gen  fork.gen  hand.gen  house.gen  leaf.gen  necklace.gen  phone.gen  sun.gen  umbrella.gen  vib-objects.set
media/schoolbook/: A1B1_Cathedrale_Gothique.gen  A3A4_Civilisations.gen  B3B4_Civilisations.gen
media/schoolbook/00_Entrainement/: 00_Entrainement.gen  00_Entrainement.prj  00_Entrainement.xml
media/schoolbook/01_Entrainement2/: 01_Entrainement2.gen  01_Entrainement2.prj
media/schoolbook/02_Voiture/: 02_Voiture.gen  02_Voiture.prj
media/schoolbook/A2_Population_Attique/: 120000.sfk  160000.sfk  180000.sfk  20000.sfk  200000.sfk  40000.sfk  A2_Population_Attique.gen  Citoyens.sfk
media/schoolbook/A4_Continents/: Oceans.sfk
media/schoolbook/B1_Cathedrale_Gothique/: B1_Cathedrale_Gothique.xml
media/schoolbook/B2_Population_Attique/: B2_Population_Attique.gen  B2_Population_Attique.xml
media/schoolbook/B3_Civilisations/: B3_Civilisations.prj
media/schoolbook/B4_Continents/: B4_Continents.prj  B4_Continents.xml
media/schoolbook/oeil/: Humeur_acqueuse.pho  Pupille.pho  Retine.txt  oeil.gen  oeil.prj  oeil.xml
media/schoolbook/oeil3/: Humeur_vitree.pho  Iris.txt  Retine.pho  Sclere.pho  oeil3.gen  oeil3.prj  oeil3.xml
src/: CMakeLists.txt  config.h  config.h.in  demo.h  generatorhandle.cpp  generatorhandle.h  main.cpp  mainwindow.cpp  mainwindow.h
src/braille/: braillecell.cpp  braillecell.h  braillecellwidget.cpp  braillecellwidget.h  braillegen.cpp  braillegen.h  braillegenfwd.h  braillegenwidget.cpp  braillegenwidget.h  braillestring.cpp  braillestring.h  braillestringwidget.cpp  braillestringwidget.h  demo.cpp  demo.h  dot.cpp  dot.h  dotgraph.cpp  dotgraph.h  dotwidget.cpp  dotwidget.h  modulator.cpp  modulator.h  modulatorwidget.cpp  modulatorwidget.h  positiongraph.cpp  positiongraph.h  virtualsurfacewidget.cpp  virtualsurfacewidget.h
src/icon/: demo.cpp  demo.h  generator.cpp  generator.h  toolbar.cpp  toolbar.h
src/img/: card.cpp  card.h  cardcollection.cpp  cardcollection.h  cardset.cpp  cardset.h  cardtable.cpp  cardtable.h  demo.cpp  demo.h  settings.h
src/schoolbook/: demo.cpp  demo.h
src/texture/: demo.cpp  demo.h
src/vector/: demo.cpp  demo.h
(+197 files in other folders)
